--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,15 +2,214 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-08 20:53:34.783 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:34.788 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.010 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run c:\\Users\\2king6_16\\anaconda3\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n",
+      "2025-02-08 20:53:37.011 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.012 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.016 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.020 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.021 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.025 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.029 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.031 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.037 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.040 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.042 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.045 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.048 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.049 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.054 Session state does not function when running a script without `streamlit run`\n",
+      "2025-02-08 20:53:37.114 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.115 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.121 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.123 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.127 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.128 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.131 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.133 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.463 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.464 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.466 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.470 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.492 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.494 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.497 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.505 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.507 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.509 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.512 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.516 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.519 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.523 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.525 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.527 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.528 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.530 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.530 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.535 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.537 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.539 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:37.540 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.320 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.321 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.324 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.328 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.330 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.335 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.338 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.339 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.342 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.344 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-02-08 20:53:38.346 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import streamlit as st\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import plotly.express as px\n",
+    "from datetime import datetime\n",
+    "import random\n",
+    "\n",
+    "# Настройка страницы\n",
+    "st.set_page_config(page_title=\"Data Analysis App\", layout=\"wide\")\n",
+    "\n",
+    "# Функция для генерации тестовых данных\n",
+    "def generate_test_data(rows=100):\n",
+    "    dates = pd.date_range(start='2024-01-01', periods=rows, freq='D')\n",
+    "    categories = ['A', 'B', 'C', 'D']\n",
+    "    \n",
+    "    data = {\n",
+    "        'Date': dates,\n",
+    "        'Category': [random.choice(categories) for _ in range(rows)],\n",
+    "        'Value': np.random.normal(100, 15, rows),\n",
+    "        'Quantity': np.random.randint(1, 100, rows),\n",
+    "        'Customer_ID': np.random.randint(1000, 9999, rows)\n",
+    "    }\n",
+    "    \n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
+    "# Функция для анализа данных\n",
+    "def analyze_data(df):\n",
+    "    results = {\n",
+    "        'total_sales': df['Value'].sum(),\n",
+    "        'avg_value': df['Value'].mean(),\n",
+    "        'total_quantity': df['Quantity'].sum(),\n",
+    "        'unique_customers': df['Customer_ID'].nunique(),\n",
+    "        'category_distribution': df['Category'].value_counts()\n",
+    "    }\n",
+    "    return results\n",
+    "\n",
+    "# Основной интерфейс\n",
+    "def main():\n",
+    "    st.title(\"📊 Интерактивный анализ данных\")\n",
+    "    \n",
+    "    # Боковая панель\n",
+    "    st.sidebar.header(\"Настройки\")\n",
+    "    rows = st.sidebar.slider(\"Количество строк данных\", 50, 500, 100)\n",
+    "    \n",
+    "    # Генерация данных\n",
+    "    if st.sidebar.button(\"Сгенерировать новые данные\"):\n",
+    "        st.session_state.df = generate_test_data(rows)\n",
+    "    \n",
+    "    if 'df' not in st.session_state:\n",
+    "        st.session_state.df = generate_test_data(rows)\n",
+    "    \n",
+    "    df = st.session_state.df\n",
+    "    \n",
+    "    # Отображение данных\n",
+    "    col1, col2 = st.columns([2, 1])\n",
+    "    \n",
+    "    with col1:\n",
+    "        st.subheader(\"📋 Просмотр данных\")\n",
+    "        st.dataframe(df)\n",
+    "    \n",
+    "    with col2:\n",
+    "        st.subheader(\"📈 Основные метрики\")\n",
+    "        metrics = analyze_data(df)\n",
+    "        \n",
+    "        st.metric(\"Общие продажи\", f\"${metrics['total_sales']:,.2f}\")\n",
+    "        st.metric(\"Средняя стоимость\", f\"${metrics['avg_value']:,.2f}\")\n",
+    "        st.metric(\"Всего единиц\", f\"{metrics['total_quantity']:,}\")\n",
+    "        st.metric(\"Уникальных клиентов\", metrics['unique_customers'])\n",
+    "    \n",
+    "    # Визуализации\n",
+    "    st.subheader(\"📊 Визуализация данных\")\n",
+    "    \n",
+    "    # Выбор типа графика\n",
+    "    chart_type = st.selectbox(\n",
+    "        \"Выберите тип графика\",\n",
+    "        [\"Линейный график\", \"Гистограмма\", \"Круговая диаграмма\", \"Диаграмма рассеяния\"]\n",
+    "    )\n",
+    "    \n",
+    "    col3, col4 = st.columns(2)\n",
+    "    \n",
+    "    with col3:\n",
+    "        if chart_type == \"Линейный график\":\n",
+    "            daily_sales = df.groupby('Date')['Value'].sum().reset_index()\n",
+    "            fig = px.line(daily_sales, x='Date', y='Value', title='Динамика продаж')\n",
+    "            st.plotly_chart(fig)\n",
+    "            \n",
+    "        elif chart_type == \"Гистограмма\":\n",
+    "            fig = px.histogram(df, x='Value', nbins=30, title='Распределение стоимости')\n",
+    "            st.plotly_chart(fig)\n",
+    "            \n",
+    "    with col4:\n",
+    "        if chart_type == \"Круговая диаграмма\":\n",
+    "            category_sales = df.groupby('Category')['Value'].sum()\n",
+    "            fig = px.pie(values=category_sales.values, names=category_sales.index, title='Продажи по категориям')\n",
+    "            st.plotly_chart(fig)\n",
+    "            \n",
+    "        elif chart_type == \"Диаграмма рассеяния\":\n",
+    "            fig = px.scatter(df, x='Value', y='Quantity', color='Category', title='Стоимость vs Количество')\n",
+    "            st.plotly_chart(fig)\n",
+    "    \n",
+    "    # Экспорт данных\n",
+    "    st.subheader(\"💾 Экспорт данных\")\n",
+    "    if st.button(\"Скачать данные как CSV\"):\n",
+    "        csv = df.to_csv(index=False)\n",
+    "        st.download_button(\n",
+    "            label=\"Подтвердить скачивание\",\n",
+    "            data=csv,\n",
+    "            file_name=f\"data_export_{datetime.now().strftime('%Y%m%d_%H%M%S')}.csv\",\n",
+    "            mime=\"text/csv\"\n",
+    "        )\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
